# HLS-TRANSCODER

./: .gitignore  .hls-transcoder.yaml  README.md  pyproject.toml
dev-docs/: AUDIO_AUTO_CHANNELS_IMPLEMENTATION.md  AUDIO_OPTIMIZATION_SUMMARY.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_ANALYSIS.md  INTEGRATION_TESTS_README.md  INTEGRATION_TEST_SUMMARY.md  Implementation Plan.md  PROGRESS.md  SPEED_FPS_FIX_SUMMARY.md  TRANSCODING_MONITOR_INTEGRATION.md
docs/: MEDIA_INSPECTOR.md  PROGRESS_TRACKING.md  RESOLUTION_HANDLING.md  System Design.md  TRANSCODING_MONITOR_UI.md  VIDEO_TRANSCODER.md
hls_transcoder/: __init__.py  __main__.py
hls_transcoder/cli/: main.py
hls_transcoder/config/: __init__.py  defaults.yaml  manager.py  models.py
hls_transcoder/executor/: __init__.py  parallel.py  subprocess.py
hls_transcoder/hardware/: __init__.py  detector.py
hls_transcoder/inspector/: __init__.py  analyzer.py
hls_transcoder/models/: __init__.py  media.py  results.py  tasks.py
hls_transcoder/planner/: __init__.py  strategy.py
hls_transcoder/playlist/: __init__.py  generator.py
hls_transcoder/sprites/: __init__.py  generator.py
hls_transcoder/transcoder/: __init__.py  audio.py  subtitle.py  video.py
hls_transcoder/ui/: __init__.py  progress.py  (+1 more)
tests/: test_audio.py  test_config.py  test_error_recovery.py  test_hardware.py  test_inspector.py  test_integration.py  test_parallel.py  test_planner.py  test_playlist.py  test_progress.py  test_reporter.py  test_resolution.py  test_sprites.py  test_subprocess.py  test_subtitle.py  test_validator.py  test_video.py
(+6 files in other folders)
